--- a/.github/workflows/malformed-yaml.yml
+++ b/.github/workflows/malformed-yaml.yml
@@ -6,7 +6,7 @@ jobs:
   reject-malformed-yaml:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ministryofjustice/github-actions/malformed-yaml@main
+      - uses: actions/checkout@v4.1.2
+      - uses: ministryofjustice/github-actions/malformed-yaml@v17.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
