--- a/.github/workflows/python-container-action.yml
+++ b/.github/workflows/python-container-action.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@4.1.2
+        uses: actions/checkout@v4.1.2
       - name: Run action
         uses: ministryofjustice/github-actions/python-container-action@mal-yaml-to-python
         with:
