--- a/.github/workflows/python-container-action.yml
+++ b/.github/workflows/python-container-action.yml
@@ -10,8 +10,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4.1.2
       - name: Run action
+        id: pythonAction
         uses: ministryofjustice/github-actions/python-container-action@mal-yaml-to-python
         with:
           myInput: Venus
       # env:
       #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check outputs
+        run: |
+        echo "Outputs - ${{ steps.pythonAction.outputs.myOutput }}"
