--- a/.github/workflows/python-container-action.yml
+++ b/.github/workflows/python-container-action.yml
@@ -14,8 +14,5 @@ jobs:
         uses: ministryofjustice/github-actions/python-container-action@mal-yaml-to-python
         with:
           myInput: Venus
-      # env:
-      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Check outputs
-        run: |
-        echo "Outputs - ${{ steps.pythonAction.outputs.* }}"
+        run: echo "Outputs - ${{ steps.pythonAction.outputs.myOutput }}"
