include gtihub token

--- a/.github/workflows/python-malformed-yaml.yml
+++ b/.github/workflows/python-malformed-yaml.yml
@@ -11,3 +11,5 @@ jobs:
         uses: actions/checkout@v4.1.2
       - name: Detect malformed yaml files
         uses: ministryofjustice/github-actions/python-malformed-yaml@mal-yaml-to-python
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
