--- a/.github/workflows/python-malformed-yaml.yml
+++ b/.github/workflows/python-malformed-yaml.yml
@@ -1,4 +1,4 @@
-name: Test Python Malformed YAML
+name: Python Malformed YAML
 on:
   pull_request:
     types: [opened, edited, reopened, synchronize]
@@ -9,7 +9,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4.1.2
-      - name: Detect malformed yaml files
+      - name: Detect malformed YAML files
         uses: ministryofjustice/github-actions/python-malformed-yaml@mal-yaml-to-python
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.number }}
